[gd_scene load_steps=15 format=3 uid="uid://cmximkgo06n23"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ul8io"]
[ext_resource type="Texture2D" uid="uid://dxuq4hlol28mp" path="res://assets/graphics/backgrounds/game_background.png" id="2_4fc3k"]
[ext_resource type="Script" path="res://scenes/background.gd" id="3_ab1ur"]
[ext_resource type="Texture2D" uid="uid://50f3k4nr5t14" path="res://assets/graphics/ui/overload_bar_empty.png" id="3_hgnun"]
[ext_resource type="Texture2D" uid="uid://dd42wde33shqt" path="res://assets/graphics/ui/overload_bar_full.png" id="4_4ul72"]
[ext_resource type="Texture2D" uid="uid://cykijchwojb3q" path="res://assets/graphics/characters/player.png" id="5_l4wcn"]
[ext_resource type="Texture2D" uid="uid://b55m7xk83hhoi" path="res://assets/graphics/icons/hp.png" id="6_508h4"]
[ext_resource type="Texture2D" uid="uid://dkybeqel2wytl" path="res://assets/graphics/icons/defend.png" id="7_15q3a"]
[ext_resource type="Texture2D" uid="uid://nnc36hwt2wtw" path="res://assets/graphics/icons/boom.png" id="8_b7hsx"]
[ext_resource type="Texture2D" uid="uid://bl5ua8y5lp3hj" path="res://assets/graphics/icons/arrow.png" id="9_dk654"]
[ext_resource type="Script" path="res://scripts/reward_window.gd" id="10_u0ccl"]
[ext_resource type="Texture2D" uid="uid://8h6q42s6yfd2" path="res://assets/graphics/backgrounds/reward_background.png" id="11_e3psl"]
[ext_resource type="PackedScene" uid="uid://d00tsf6iiogat" path="res://scenes/tutorial_panel.tscn" id="13_8dafy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_241hd"]
texture = ExtResource("11_e3psl")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ul8io")

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.643137, 0.643137, 0.643137, 1)
texture = ExtResource("2_4fc3k")
centered = false
script = ExtResource("3_ab1ur")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OverloadLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.870588, 0, 1)
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "OVERLOAD_ABOVE_BAR"
fit_content = true

[node name="OverloadBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLTIP_OVERLOAD"
mouse_filter = 0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("3_hgnun")
texture_progress = ExtResource("4_4ul72")

[node name="OverloadBarLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/OverloadBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -11.5
offset_right = 13.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "X / Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "AVAILABLE POWERS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "ACTIVE POWERS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActiveContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
text = "ACTIVATE"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WavesLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.0431373, 0.298039, 0.286275, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22
text = "WAVES LEFT: Q"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1

[node name="PlayerSpriteContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 160)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/PlayerSpriteContainer"]
layout_mode = 2

[node name="PlayerSprite" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/PlayerSpriteContainer/Control"]
unique_name_in_owner = true
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_l4wcn")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "TOOLTIP_HEALTH"
mouse_filter = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("6_508h4")

[node name="PlayerHpLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Y"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "TOOLTIP_DEFEND"
mouse_filter = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/CenterContainer/Control"]
texture = ExtResource("7_15q3a")

[node name="DefendLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Z"

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_ENEMY_ATTACK"
mouse_filter = 0

[node name="Wave0" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer/Wave0"]
texture = ExtResource("8_b7hsx")

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_ENEMY_MOVE"
mouse_filter = 0

[node name="Wave1" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer2/Wave1"]
texture = ExtResource("9_dk654")

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_ENEMY_MOVE"
mouse_filter = 0

[node name="Wave2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer3/Wave2"]
texture = ExtResource("9_dk654")

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_ENEMY_MOVE"
mouse_filter = 0

[node name="Wave3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer4/Wave3"]
texture = ExtResource("9_dk654")

[node name="EnemyGridOrigin" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 22
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 22
text = "QUIT"

[node name="RewardWindow" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_241hd")
script = ExtResource("10_u0ccl")

[node name="MarginContainer" type="MarginContainer" parent="RewardWindow"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="RewardWindow/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.58

[node name="Label" type="Label" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "REWARD_TITLE"

[node name="Control2" type="Control" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HideButton" type="Button" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
text = "CHOOSE LATER"

[node name="RewardButtonContainer" type="HBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="ReturnOption" type="Button" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="RichTextLabel" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "RETURN_POWERS_REWARD"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("6_508h4")

[node name="Label" type="Label" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "- 1"

[node name="CannotReturnLabel" type="RichTextLabel" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "RETURN_POWERS_UNAVAILABLE_HINT"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="DiscardScrollContainer" type="ScrollContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DiscardContainer" type="VBoxContainer" parent="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption/VBoxContainer/MarginContainer/DiscardScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "CONFIRM_DIALOG"
dialog_text = "QUIT_DIALOG_TEXT"
cancel_button_text = "CANCEL"

[node name="NoPowersDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "CONFIRM_DIALOG"
dialog_text = "NO_POWERS_DIALOG_TEXT"
cancel_button_text = "CANCEL"

[node name="UnusedDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "CONFIRM_DIALOG"
dialog_text = "UNUSED_DIALOG_TEXT"
cancel_button_text = "CANCEL"

[node name="TutorialPanel" parent="." instance=ExtResource("13_8dafy")]
unique_name_in_owner = true
visible = false
layout_mode = 0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="closed" from="RewardWindow" to="." method="_on_reward_window_closed"]
[connection signal="pressed" from="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="RewardWindow/MarginContainer/CenterContainer/VBoxContainer/RewardButtonContainer/ReturnOption" to="RewardWindow" method="_on_return_option_pressed"]
[connection signal="canceled" from="QuitDialog" to="." method="_on_quit_dialog_canceled"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_dialog_confirmed"]
[connection signal="canceled" from="NoPowersDialog" to="." method="_on_no_powers_dialog_canceled"]
[connection signal="confirmed" from="NoPowersDialog" to="." method="_on_no_powers_dialog_confirmed"]
[connection signal="canceled" from="UnusedDialog" to="." method="_on_unused_dialog_canceled"]
[connection signal="confirmed" from="UnusedDialog" to="." method="_on_unused_dialog_confirmed"]
